--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>RobiTech Solutions is an agency that grows your brand through building for you <b>business websites</b> and <b>internet marketing campaigns</b></title>
+        <title>RobiTech Solutions is a freelance website developer who grows your brand through building for you <b> branding and business websites</b></title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
@@ -46,27 +46,60 @@
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
-            Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also manage <b>internet marketing campaigns</b> that will draw more traffic to your website and your YouTube channel. Grow your business to the level it deserves. 
+            Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>branding or business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also get <b>website maintenance services</b> that work with your budget. Grow your brand or business to the level it deserves. 
           </p>
           </div>
         </section> 
         <section class="fluid-container justify-items-center bg-dark text-white" id="services">
           <div class="container">
             <h2><b>SERVICES</b></h2>
-            <h2><b>Business Websites</b></h2>
+            <h2><b>Websites</b></h2>
             <p>
             A good business brand deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
-            To have a glance on the kind of websites that RobiTech develops, check out the following samples;
+            To have a glance at the kind of websites that RobiTech develops, check out the following samples;
             <li><a href="https://jmedianetworktv.github.io" style="color: olivedrab;">Jmedia Network TV Website.</a></li>
             <li><a href="https://choppa254.github.io" style="color: olivedrab;">Choppa254 Website.</a></li>
-            These websites have been developed using <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> web technologies. The web graphics used have been designed using the <b>Canva</b> graphic design software. You need to get one such with RobaTech Solutions.
+            These websites have been developed using <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> web technologies. The web graphics used have been designed using the <b>Canva</b> graphic design software. You need to get one such with RobiTech Solutions.
             </p>
-            <h2><b>Internet Marketing</b></h2>
+               <h2><b>Websites</b></h2>
+  <p>
+    Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
+    Check out the pricing.
+  </p> 
+  <div class="card text-center">
+    <div class="card-header">
+        <b>Branding Websites</b>
+        </div>
+        <div class="card-body">
+          <ul>
+              <li>Social media integration</li>
+              <li>Includes domain</li>
+              <li>Content development</li>
+          </ul>
+        </div>
+        <div class="card-footer text-muted">
+          <b>KES 14999</b>
+        </div>
+        <div class="card-header">
+            <b>Business Websites</b>
+            </div>
+            <div class="card-body">
+              <ul>
+                  <li>Social media integration</li>
+                  <li>Includes domain</li>
+                  <li>Content development</li>
+                  <li>GoogleMyBusiness integration</li>
+                  <li>MPESA/PayPal integration</li>
+                  <li>Google Analytics integration</li>
+              </ul>
+            </div>
+            <div class="card-footer text-muted">
+              <b>KES 24999</b>
+            </div>
+            <h2><b>Website Maintenance</b></h2>
             <p>
-              RobiTech Solutions is committed to growing your brand in these ways;
-              <li><b>Social media marketing.</b>Through social media campaigns, you can have your brand grown intensively through <b>social media management tools</b>. These tools manage posts and track progress so that it can be estabilished how to improve <b>social media campaigns</b>. <b>Designing social media posts</b> and using them for social media campaigns might sometimes be hectic and time-consuming, considering the unpredictable personal schedules. Leave that to RobiTech Solutions.</li>
-              <li><b>Email Marketing.</b> Through this agency, you will manage to <b>collect emails</b> of your potential clients in a <b>database</b> so that <b>email marketing tools</b> can manage posts that will increase the rate of conversions in your blog or website.</li>
-              <li><b>Content Marketing.</b> You have a great product but unable to put words together or design social media posts for your online campaign? Why not try RobiTech Solutions? Through <b>content writing</b> and <b>designing social media posts and flyers</b> it becomes possible through this agency.</li>
+             In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
+              <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#contact">GET A QUOTE</a>   
             </p>
            </div> 
         </section>
