--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="card-footer text-muted">
           <b>KES 14999</b>
         </div>
-        <div class="card-header">
+        <div class="card-header bg-dark">
             <b>Business Websites</b>
             </div>
             <div class="card-body">
