--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="card-header">
         <b>Branding Websites</b>
         </div>
-        <div class="card-body">
+        <div class="card-body bg-dark">
           <ul>
               <li>Social media integration</li>
               <li>Includes domain</li>
@@ -83,7 +83,7 @@
         <div class="card-header bg-dark">
             <b>Business Websites</b>
             </div>
-            <div class="card-body">
+            <div class="card-body bg-dark">
               <ul>
                   <li>Social media integration</li>
                   <li>Includes domain</li>
