--- a/index.html
+++ b/index.html
@@ -96,11 +96,13 @@
             <div class="card-footer text-muted">
               <b>KES 24999</b>
             </div>
+           <div class=" bg-dark text-white">
             <h2><b>Website Maintenance</b></h2>
             <p>
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#contact">GET A QUOTE</a>   
             </p>
+           </div>
            </div> 
         </section>
         <section class="fluid-container bg-white text-black justify-items-center" id="contact">  
