--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     Check out the pricing.
   </p> 
   <div class="card text-center">
-    <div class="card-header">
+    <div class="card-header bg-dark">
         <b>Branding Websites</b>
         </div>
         <div class="card-body bg-dark">
@@ -96,14 +96,12 @@
             <div class="card-footer text-muted">
               <b>KES 24999</b>
             </div>
-           <div class=" bg-dark text-white">
-            <h2><b>Website Maintenance</b></h2>
+           </div>
+             <h2><b>Website Maintenance</b></h2>
             <p>
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#contact">GET A QUOTE</a>   
-            </p>
-           </div>
-           </div> 
+            </p>  
         </section>
         <section class="fluid-container bg-white text-black justify-items-center" id="contact">  
          <div class="container">
