--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </ul>
                 </div>
                 <a class="navbar-brand" href="#page-top">ROBITECH SOLUTIONS</a>
-                <img src="/robitechlogo.jpeg" alt="Robitech Logo" height="36">
+                <img src="/robitechlogo.png" alt="Robitech Logo" height="36">
             </div>
         </nav>
         <!-- Header-->
@@ -38,7 +38,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
               </form>
-            <img src="/robitechlogo.jpeg" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
+            <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#about">SEE HOME PAGE</a>
         </section>
