--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <section class="fluid-container justify-items-center bg-dark text-white">
+        <div class="fluid-container justify-items-center bg-dark text-white">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
@@ -41,7 +41,7 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#about">SEE HOME PAGE</a>
-        </section>
+        </div>
         <section class="fluid-container justify-items-center bg-white text-black" id="about">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
@@ -66,7 +66,7 @@
     Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
     Check out the pricing.
   </p> 
-  <div class="card text-center">
+  <div class="card">
     <div class="card-header bg-dark">
         <b>Branding Websites</b>
         </div>
