--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center bg-dark text-white">
+        <div class="fluid-container justify-items-center text-white" style="background-color:#000080;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
@@ -42,7 +42,7 @@
             <br>
             <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#about">SEE HOME PAGE</a>
         </div>
-        <section class="fluid-container justify-items-center bg-white text-black" id="about">
+        <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#1F51FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -50,18 +50,17 @@
           </p>
           </div>
         </section> 
-        <section class="fluid-container justify-items-center bg-dark text-white" id="services">
+        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#ADD8E6;">
           <div class="container">
             <h2><b>SERVICES</b></h2>
             <h2><b>Websites</b></h2>
             <p>
-            A good business brand deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
+            A great brand or business deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
             To have a glance at the kind of websites that RobiTech develops, check out the following samples;
             <li><a href="https://jmedianetworktv.github.io" style="color: olivedrab;">Jmedia Network TV Website.</a></li>
             <li><a href="https://choppa254.github.io" style="color: olivedrab;">Choppa254 Website.</a></li>
             These websites have been developed using <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> web technologies. The web graphics used have been designed using the <b>Canva</b> graphic design software. You need to get one such with RobiTech Solutions.
             </p>
-               <h2><b>Websites</b></h2>
   <p>
     Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
     Check out the pricing.
@@ -97,20 +96,22 @@
               <b>KES 24999</b>
             </div>
            </div>
+            <div class="container">
              <h2><b>Website Maintenance</b></h2>
             <p>
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg btn-dark col-lg-8 justify-content-center" href="#contact">GET A QUOTE</a>   
-            </p>  
+            </p>
+           </div>
         </section>
-        <section class="fluid-container bg-white text-black justify-items-center" id="contact">  
+        <section class="fluid-container text-white justify-items-center" id="contact" style="background-color:#000080;">  
          <div class="container">
           <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center bg-dark text-white" id="media_pages">
+        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#1F51FF;">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
@@ -122,8 +123,8 @@
         </section>
         </section>
         <!-- Footer-->
-            <div class="fluid-container">
-                <p class="container text-center text-black">Copyright &copy; RobiTech Solutions 2023</p>
+            <div class="fluid-container" style:"background-color:#ADD8E6;">
+                <p class="container text-center text-white">Copyright &copy; RobiTech Solutions 2023</p>
             </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
