--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav style="background-color:0080F;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav style="">
             <div class="container px-4">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -33,16 +33,16 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white" style="background-color:#00003;">
+        <div class="fluid-container justify-items-center text-white" style="background-color:#000080;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
               </form>
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center" href="#about" style="background-color:0080F;>SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center" href="#about" style="background-color:#1F51FF;">SEE HOME PAGE</a>
         </div>
-        <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#00009;">
+        <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -50,7 +50,7 @@
           </p>
           </div>
         </section> 
-        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#0080F;">
+        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#000080;">
           <div class="container">
             <h2><b>SERVICES</b></h2>
             <h2><b>Websites</b></h2>
@@ -66,10 +66,10 @@
     Check out the pricing.
   </p> 
   <div class="card">
-    <div class="card-header text-white" style="background-color:00003;">
+    <div class="card-header text-white" style="background-color:#1F51FF;">
         <b>Branding Websites</b>
         </div>
-        <div class="card-body text-white" style="background-color:00003;">
+        <div class="card-body text-white" style="background-color:#1F51FF;">
           <ul>
               <li>Social media integration</li>
               <li>Includes domain</li>
@@ -79,10 +79,10 @@
         <div class="card-footer text-muted">
           <b>KES 14999</b>
         </div>
-        <div class="card-header text-white" style="background-color:00003;>
+        <div class="card-header text-white" style="background-color:#1F51FF;">
             <b>Business Websites</b>
             </div>
-            <div class="card-body text-white" style="background-color:00003;>
+            <div class="card-body text-white" style="background-color:#1F51FF;">
               <ul>
                   <li>Social media integration</li>
                   <li>Includes domain</li>
@@ -100,18 +100,18 @@
              <h2><b>Website Maintenance</b></h2>
             <p>
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center" href="#contact" style="background-color:0080F;">GET A QUOTE</a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center" href="#contact" style="background-color:#0000FF;">GET A QUOTE</a>   
             </p>
            </div>
         </section>
-        <section class="fluid-container text-white justify-items-center" id="contact" style="background-color:#00009;">  
+        <section class="fluid-container text-white justify-items-center" id="contact" style="background-color:#3F00FF;">  
          <div class="container">
           <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#0080F;">
+        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#000080;">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
@@ -123,7 +123,7 @@
         </section>
         </section>
         <!-- Footer-->
-            <div class="fluid-container" style:"background-color:#00003;">
+            <div class="fluid-container" style:"background-color:#1F51FF;">
                 <p class="container text-center text-white">Copyright &copy; RobiTech Solutions 2023</p>
             </div>
         <!-- Bootstrap core JS-->
