--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </form>
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center" href="#about" style="background-color:#1F51FF;">SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark" href="#about">SEE HOME PAGE</a>
         </div>
         <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#3F00FF;">
          <div class="container">
@@ -50,7 +50,7 @@
           </p>
           </div>
         </section> 
-        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#000080;">
+        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#191970;">
           <div class="container">
             <h2><b>SERVICES</b></h2>
             <h2><b>Websites</b></h2>
@@ -100,7 +100,7 @@
              <h2><b>Website Maintenance</b></h2>
             <p>
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center" href="#contact" style="background-color:#0000FF;">GET A QUOTE</a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-dark" href="#contact">GET A QUOTE</a>   
             </p>
            </div>
         </section>
@@ -111,7 +111,7 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#000080;">
+        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#191970;">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
