--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white" style="background-color:#000080;">
+        <div class="fluid-container justify-items-center text-white" style="background-color:#191970;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
               </form>
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark" href="#about">SEE HOME PAGE</a>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
         </div>
         <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#3F00FF;">
          <div class="container">
@@ -100,7 +100,7 @@
              <h2><b>Website Maintenance</b></h2>
             <p>
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
-              <a class="btn btn-lg col-lg-8 justify-content-center bg-dark" href="#contact">GET A QUOTE</a>   
+              <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#contact">GET A QUOTE</a>   
             </p>
            </div>
         </section>
@@ -122,9 +122,9 @@
          </div>
         </section>
         <!-- Footer-->
-            <div class="fluid-container" style:"background-color:#1F51FF;">
+            <section class="fluid-container" style:"background-color:#1F51FF;">
                 <p class="container text-center text-white">Copyright &copy; RobiTech Solutions 2023</p>
-            </div>
+            </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
