--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
-              <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
+              <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: black; font-size: 5rem;"></i></a>
               <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
               <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
           </div>
