--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#191970;">
+        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#000080;">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
-              <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: black; font-size: 5rem;"></i></a>
+              <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
               <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
               <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
           </div>
          </div>
         </section>
         <!-- Footer-->
-            <section class="fluid-container" style:"background-color:#1F51FF;">
+            <section class="fluid-container" style:"background-color:#0096FF;">
                 <p class="container text-center text-white">Copyright &copy; RobiTech Solutions 2023</p>
             </section>
         <!-- Bootstrap core JS-->
