--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center text-white" id="media_pages" style:"background-color:#000080;">
+        <section class="fluid-container justify-items-center text-white bg-dark" id="media_pages">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
@@ -122,8 +122,8 @@
          </div>
         </section>
         <!-- Footer-->
-            <section class="fluid-container" style:"background-color:#0096FF;">
-                <p class="container text-center text-white">Copyright &copy; RobiTech Solutions 2023</p>
+            <section class="fluid-container bg-white">
+                <p class="container text-center text-black">Copyright &copy; RobiTech Solutions 2023</p>
             </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
