--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white" style="background-color:#191970;">
+        <div class="fluid-container justify-items-center text-white" style="background-color:#0B0B45;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
@@ -50,7 +50,7 @@
           </p>
           </div>
         </section> 
-        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#191970;">
+        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#0B0B45;">
           <div class="container">
             <h2><b>SERVICES</b></h2>
             <h2><b>Websites</b></h2>
@@ -111,7 +111,7 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center text-white bg-dark" id="media_pages">
+        <section class="fluid-container justify-items-center text-white" id="media_pages" style="background-color:0B0B45;">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
@@ -122,8 +122,8 @@
          </div>
         </section>
         <!-- Footer-->
-            <section class="fluid-container bg-white">
-                <p class="container text-center text-black">Copyright &copy; RobiTech Solutions 2023</p>
+            <section class="fluid-container bg-dark text-white">
+                <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
             </section>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
