--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div>
         </section>
-        <section class="fluid-container justify-items-center text-white" id="media_pages" style="background-color:0B0B45;">
+        <section class="fluid-container justify-items-center text-white" id="media_pages" style="background-color:#0B0B45;">
          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
@@ -122,9 +122,9 @@
          </div>
         </section>
         <!-- Footer-->
-            <section class="fluid-container bg-dark text-white">
+            <div class="fluid-container text-white" style="background-color:#1F51FF;">
                 <p class="container text-center">Copyright &copy; RobiTech Solutions 2023</p>
-            </section>
+            </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
