--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </p> 
   <div class="card">
     <div class="card-header text-white" style="background-color:#1F51FF;">
-        <b>Branding Websites</b>
+        <b>Branding/Portfolio Websites</b>
         </div>
         <div class="card-body text-white" style="background-color:#1F51FF;">
           <ul>
