--- a/index.html
+++ b/index.html
@@ -43,25 +43,24 @@
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
         </div>
         <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#3F00FF;">
-          <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
+         <div class="container">
+ <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
             Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>branding or business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also get <b>website maintenance services</b> that work with your budget. Grow your brand or business to the level it deserves. 
           </p>
         </section> 
         <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#0B0B45;">
             <h2><b>SERVICES</b></h2>
-            <h2><b>Websites</b></h2>
-            <p>
+            <h1><b>Websites</b></h1>
+         
             A great brand or business deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
             To have a glance at the kind of websites that RobiTech develops, check out the following samples;
             <li><a href="https://jmedianetworktv.github.io" style="color: olivedrab;">Jmedia Network TV Website.</a></li>
             <li><a href="https://choppa254.github.io" style="color: olivedrab;">Choppa254 Website.</a></li>
             These websites have been developed using <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> web technologies. The web graphics used have been designed using the <b>Canva</b> graphic design software. You need to get one such with RobiTech Solutions.
-            </p>
-  <p>
-    Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
-    Check out the pricing.
-  </p> 
+            Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
+             Check out the pricing.
+  
   <div class="card">
     <div class="card-header text-white" style="background-color:#1F51FF;">
         <b>Branding/Portfolio Websites</b>
@@ -93,24 +92,29 @@
               <b>KES 24999</b>
             </div>
            </div>
-             <h2><b>Website Maintenance</b></h2>
-            <p>
+             <h1><b>Website Maintenance</b></h1>
+            
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#contact">GET A QUOTE</a>   
-            </p>
+            <div>
         </section>
         <section class="fluid-container text-white justify-items-center" id="contact" style="background-color:#3F00FF;">  
-          <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
+         <div class="container">
+<h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
-        </section>
+         <div> 
+       </section>
+        <div class="container">
         <section class="fluid-container justify-items-center text-white" id="media_pages" style="background-color:#0B0B45;">
+          <div class="container">
           <h2><b>COMMUNITY</b></h2>
           <div style="display: block;">
               <a href="https://web.facebook.com/profile.php?id=100091460356248"><i class="fa fa-facebook" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
               <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
               <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
           </div>
+         <div>
         </section>
         <!-- Footer-->
             <div class="fluid-container text-white" style="background-color:#1F51FF;">
