--- a/index.html
+++ b/index.html
@@ -50,9 +50,10 @@
           </p>
         </section> 
         <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#0B0B45;">
+           <div class="container">
             <h2><b>SERVICES</b></h2>
             <h1><b>Websites</b></h1>
-         
+         <p>
             A great brand or business deserves a modern web page that will reach a greater audience out there. RobiTech Solutions will develop a beautiful and search engine optimised business website that will draw more traffic to your social media pages and YouTube channel.
             To have a glance at the kind of websites that RobiTech develops, check out the following samples;
             <li><a href="https://jmedianetworktv.github.io" style="color: olivedrab;">Jmedia Network TV Website.</a></li>
@@ -60,7 +61,7 @@
             These websites have been developed using <b>HTML</b>, <b>CSS</b> and <b>JavaScript</b> web technologies. The web graphics used have been designed using the <b>Canva</b> graphic design software. You need to get one such with RobiTech Solutions.
             Get a modern branding or business website at a cost that won't break the bank. A website grows your brand or business more than social media would do and makes the world take you more serious. Why not try RobiTech Solutions?
              Check out the pricing.
-  
+        </p>
   <div class="card">
     <div class="card-header text-white" style="background-color:#1F51FF;">
         <b>Branding/Portfolio Websites</b>
@@ -93,17 +94,18 @@
             </div>
            </div>
              <h1><b>Website Maintenance</b></h1>
-            
+           <p>   
              In case you are not conversant with website maintenance practices such as hosting or web content update, RobiTech Solutions can handle that at your budget.
               <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#contact">GET A QUOTE</a>   
-            <div>
+           </p>
+         </div>
         </section>
         <section class="fluid-container text-white justify-items-center" id="contact" style="background-color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
-         <div> 
+         </div> 
        </section>
         <div class="container">
         <section class="fluid-container justify-items-center text-white" id="media_pages" style="background-color:#0B0B45;">
@@ -114,7 +116,7 @@
               <a href="https://mobile.twitter.com/writers_fast"><i class="fa fa-twitter" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
               <a href="https://www.linkedin.com/company/robatech-solutions/"><i class="fa fa-linkedin" style="display: inline-block; color: white; font-size: 5rem;"></i></a>
           </div>
-         <div>
+         </div>
         </section>
         <!-- Footer-->
             <div class="fluid-container text-white" style="background-color:#1F51FF;">
