--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
           <p>
             Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>branding or business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also get <b>website maintenance services</b> that work with your budget. Grow your brand or business to the level it deserves. 
           </p>
+          </div>
         </section> 
         <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#0B0B45;">
            <div class="container">
