--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="CALL " />
+        <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="" />
-        <title>RobiTech Solutions. Freelance website developer. CALL 0718301634<b> Branding and business websites.</b></title>
+        <title>RobiTech Solutions.Branding and business WEBSITES.</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
