--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="CALL 0718301634" />
-        <meta name="author" content="" />
-        <title>RobiTech Solutions.WEBSITE developer.</title>
+        <meta name="author" content="RobiTech Solutions" />
+        <title>Branding & business websites.</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
@@ -33,7 +33,7 @@
             </div>
         </nav>
         <!-- Header-->
-        <div class="fluid-container justify-items-center text-white" style="background-color:#0B0B45;">
+        <div class="fluid-container justify-items-center text-white pxy-1" style="background-color:#0B0B45;">
             <form class="form-inline container">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="fa fa-search"></i></button>
@@ -42,7 +42,7 @@
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
         </div>
-        <section class="fluid-container justify-items-center text-white" id="about" style="background-color:#3F00FF;">
+        <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
  <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
@@ -50,7 +50,9 @@
           </p>
           </div>
         </section> 
-        <section class="fluid-container justify-items-center text-white" id="services" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center text-white pxy-4
+
+" id="services" style="background-color:#0B0B45;">
            <div class="container">
             <h2><b>SERVICES</b></h2>
             <h1><b>Websites</b></h1>
@@ -101,14 +103,14 @@
            </p>
          </div>
         </section>
-        <section class="fluid-container text-white justify-items-center" id="contact" style="background-color:#3F00FF;">  
+        <section class="fluid-container text-white justify-items-center pxy-1" id="contact" style="background-color:#3F00FF;">  
          <div class="container">
 <h2><b>CONTACT ROBITECH SOLUTIONS</b></h2>
           <li><i class="fa fa-phone" style="font-size: x-large;">  <b>+254718301634</b></i></li>
           <li><i class="fa fa-envelope" style="font-size: large;">  <b>musilarobert93@gmail.com</b></i></li>
          </div> 
        </section>
-        <section class="fluid-container justify-items-center text-white" id="media_pages" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center text-white pxy-1" id="media_pages" style="background-color:#0B0B45;">
           <div class="container">
            <h2><b>COMMUNITY</b></h2>
            <div style="display: block;">
