--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="RobiTech Solutions. CALL 0718301634" />
+        <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="RobiTech Solutions"/>
-        <title>Branding & business websites.</title>
+        <title>RobiTech Solutions. Branding & business websites.</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
