--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="RobiTech Solutions"/>
-        <title>RobiTech Solutions. Branding & business websites.</title>
+        <title>RobiTech Solutions. Marketing WEBSITES.</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
