--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="RobiTech Solutions"/>
         <title>RobiTech Solutions. Marketing WEBSITES.</title>
+        <link rel="stylesheet"  href="https://robitechsolutions.github.io"/>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
@@ -41,6 +42,9 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
+            <br>
+            <i><b>Chat With Us</b></i>                                                                                     
+            <i style"font-size:2rem; background-color:#1F51FF;">fa fa-whatsapp  <a href="https://wa.me/254718301634"></a></i>                                                                                     
         </div>
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
@@ -50,9 +54,7 @@
           </p>
           </div>
         </section> 
-        <section class="fluid-container justify-items-center text-white pxy-1
-
-" id="services" style="background-color:#0B0B45;">
+        <section class="fluid-container justify-items-center text-white pxy-1" id="services" style="background-color:#0B0B45;">
            <div class="container">
             <h2><b>SERVICES</b></h2>
             <h1><b>Websites</b></h1>
