--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
         <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="RobiTech Solutions"/>
         <title>RobiTech Solutions. Marketing WEBSITES.</title>
-        <link rel="stylesheet"  href="https://robitechsolutions.github.io"/>
+        <meta property="og:url" content="https://robitechsolutions,github.io" />
+        <meta property="og:type" content="Business Website"/>
+        <meta property="og:title" content="RobiTech Solutions" />
+        <meta property="og:description" content="Marketing WEBSITES, CALL 0718301634" />
+        <meta property="og:image" content="/robitechlogo.jpg" />
+        <link rel="cannonical"  href="https://robitechsolutions.github.io" />
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="/styles.css" rel="stylesheet" />
@@ -41,19 +46,17 @@
               </form>
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>
-            <br>
-            <i><b>Chat With Us</b></i>                                                                                     
-            <i style"font-size:2rem; background-color:#1F51FF;">fa fa-whatsapp  <a href="https://wa.me/254718301634"></a></i>                                                                                     
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>                                                                                     
+            <i style="font-size: 1rem; background-color: #1F51FF;">fa fa-whatsapp  <a href="https://wa.me/254718301634"></a></i>                                                                                     
         </div>
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
- <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
+          <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
           <p>
             Welcome to RobiTech Solutions. With the growing demand for marketing your brand, RobiTech Solutions comes at your disposition. Grow your brand by having a <b>branding or business website</b> built for you at a cost that won't break the bank. Through RobiTech Solutions you will also get <b>website maintenance services</b> that work with your budget. Grow your brand or business to the level it deserves. 
           </p>
-          </div>
-        </section> 
+         </div>
+       </section> 
         <section class="fluid-container justify-items-center text-white pxy-1" id="services" style="background-color:#0B0B45;">
            <div class="container">
             <h2><b>SERVICES</b></h2>
