--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>                                                                                     
-            <i style="font-size: 1rem; background-color: #1F51FF;">fa fa-whatsapp  <a href="https://wa.me/254718301634"></a></i>                                                                                     
+            <a href="https://wa.me/254718301634"> <i class="fa fa-whatsapp" style="font-size: 1rem; background-color: #1F51FF;"></i></a>                                                                                     
         </div>
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
