--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="description" content="CALL 0718301634" />
         <meta name="author" content="RobiTech Solutions"/>
         <title>RobiTech Solutions. Marketing WEBSITES.</title>
-        <meta property="og:url" content="https://robitechsolutions,github.io" />
+        <meta property="og:url" content="https://robitechsolutions.github.io" />
         <meta property="og:type" content="Business Website"/>
         <meta property="og:title" content="RobiTech Solutions" />
-        <meta property="og:description" content="Marketing WEBSITES, CALL 0718301634" />
+        <meta property="og:description" content="WEBSITES,CALL 0718301634" />
         <meta property="og:image" content="/robitechlogo.jpg" />
         <link rel="cannonical"  href="https://robitechsolutions.github.io" />
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
@@ -47,7 +47,7 @@
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
             <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>                                                                                     
-            <a href="https://wa.me/254718301634"> <i class="fa fa-whatsapp" style="font-size: 1rem; background-color: #1F51FF;"></i></a>                                                                                     
+            <a href="https://wa.me/254718301634"> <b>Chat with RobiTech</b> <i class="fa fa-whatsapp" style="font-size: 1.6rem; color: #1F51FF;"></i></a>                                                                                     
         </div>
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
