--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
               </form>
             <img src="/robitechlogo.png" alt="RobiTech Solutions Logo" style="width: 100%; height:75%;">
             <br>
-            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a>                                                                                     
-            <a href="https://wa.me/254718301634"> <b>Chat with RobiTech</b> <i class="fa fa-whatsapp" style="font-size: 1.6rem; color: #1F51FF;"></i></a>                                                                                     
-        </div>
+            <a class="btn btn-lg col-lg-8 justify-content-center bg-dark text-white" href="#about">SEE HOME PAGE</a> 
+            <p class="text-white"><b>WhatsApp</b></p>
+            <a href="https://wa.me/254718301634"> <i class="fa fa-facebook" style="font-size: 1.6rem; color:#1F51FF;"><i/></a>
         <section class="fluid-container justify-items-center text-white pxy-1" id="about" style="background-color:#3F00FF;">
          <div class="container">
           <h2><b>ABOUT ROBITECH SOLUTIONS</b></h2>   
